# Gravity-rs

./: .gitignore  Cargo.toml  LOG  README.md
shaders/: compute.wgsl  incriment_bodys.wgsl  render.wgsl
src/: main.rs
src/application/: mod.rs
src/graphics/: compute.rs  mod.rs  rendering.rs  vertices.rs
