[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-std = "1.13.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
derive_builder = "0.20.2"
glam = "0.29.2"
log = "0.4.25"
rand = "0.9.0"
simplelog = "0.12.2"
wgpu = "24.0.1"
winit = "0.30.8"
